--- a/api-yowl/.env
+++ b/api-yowl/.env
@@ -8,10 +8,10 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=heroku
-DB_USERNAME=database
+DB_USERNAME=oulala
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
