--- a/api-yowl/.env
+++ b/api-yowl/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=176.190.176.60
+DB_HOST=db4free.net
 DB_PORT=3306
-DB_DATABASE=heroku
-DB_USERNAME=oulala
-DB_PASSWORD=password
+DB_DATABASE=nuitblanche
+DB_USERNAME=mehdietalex
+DB_PASSWORD=0bf7c80d
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
